--- a/rpc-client-zk/pom.xml
+++ b/rpc-client-zk/pom.xml
@@ -5,17 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.masaiqi</groupId>
-  <artifactId>rpc-framework-custom</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>rpc-server</module>
-        <module>rpc-client</module>
-        <module>rpc-client-zk</module>
-        <module>rpc-server-zk</module>
-    </modules>
+  <artifactId>rpc-client-zk</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-    <name>rpc-framework :: rpc-framework-custom</name>
+  <name>rpc-framework :: rpc-client-zk</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -32,6 +25,26 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.masaiqi</groupId>
+          <artifactId>rpc-server-api</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.curator</groupId>
+          <artifactId>curator-framework</artifactId>
+          <version>4.2.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.curator</groupId>
+          <artifactId>curator-recipes</artifactId>
+          <version>4.2.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>5.2.3.RELEASE</version>
+      </dependency>
   </dependencies>
 
   <build>
@@ -78,5 +91,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
